Cabal-Version:      2.4
Name:               plutus-script
Version:            0.1.0.0
Author:             James Browning
Maintainer:         james.browning@iohk.io
Build-Type:         Simple
Copyright:          © 2022 James Browning
-- License:            Apache-2.0
-- License-files:      LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     UntypedHelloWorld
                     , TypedDatumRedeemer42
                     , Deadline
                     , DeadlinePolicy
                     , DeadlineRedeemerPolicy
                     , TokenNamePolicy
                     , CheckDatumPolicy
                     , CheckReferenceInputs
                     , CheckReferenceScriptPolicy
                     , CheckRedeemersPolicy
                     , CheckWitnessPolicy
                     , CountRedeemersPolicy
                     , CountDatumMapPolicy
                     , CheckDatumMapPolicy
                     , CountReferenceInputsPolicy
                     , CheckTxInDatumPolicyV1
                     , NFTMint
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , containers
                     , cardano-api
                     , data-default
                     , freer-extras
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-script-utils
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , serialise
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

--executable hello
--  hs-source-dirs:      app
--  main-is:             hello.hs
--  build-depends:       base ^>=4.14.1.0
--  default-language:    Haskell2010
--  ghc-options:         -Wall -O2
